remove overflowY from modal; fix feature breakdown tab

--- a/public/pages/DetectorDetail/index.scss
+++ b/public/pages/DetectorDetail/index.scss
@@ -13,10 +13,6 @@
  * permissions and limitations under the License.
  */
 
-@import 'components/ContentPanel/index.scss';
-@import 'pages/createDetector/index.scss';
-@import 'pages/Dashboard/index.scss';
-@import 'pages/DetectorConfig/index.scss';
-@import 'pages/AnomalyCharts/index.scss';
-@import 'pages/DetectorResults/index.scss';
-@import 'pages/DetectorDetail/index.scss';
+.euiModalBody__overflow {
+  overflow-y: hidden !important;
+}
